# EmptyProject

./: .gitignore  CMakeLists.txt  README  todo.todo
cmake/: config.cmake
main/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/log/: CMakeLists.txt  log.h
